fix cut-off title of cards on mobile

--- a/plogo-vadis/src/Pages/Main/index.css
+++ b/plogo-vadis/src/Pages/Main/index.css
@@ -72,3 +72,7 @@
         transform:translateY(0);
     }
 }
+
+div.ant-card-head-title {
+    white-space: normal;
+}
